<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_step_detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:id="@+id/better_media"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ProgressBar
            android:id="@+id/loading_indicator_step_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:visibility="visible"
            android:contentDescription="@string/loading"/>

        <ImageView
            android:id="@+id/iv_stepVideoImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:contentDescription="@null"/>

        <include
            android:id="@+id/player_layout"
            layout="@layout/fragment_recipe_step_player_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/tv_step_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginTop="2dp"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_step_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="16dp"
            />

        <RelativeLayout
            android:id="@+id/rl_buttons_prev_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/btn_prev_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"/>

            <Button
                android:id="@+id/btn_next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
